# agent_celsia

./: .env  .gitignore  ESTRUCTURA_PROYECTO.md  INICIO_RAPIDO.md  README.md  app.py  app1.py  main.py  pyproject.toml  rag_celsia.ipynb  regenerar_chromadb.py  regenerate_chromadb.py  requirements.txt  test_api.py  test_parametros_llm.py  tools_celsia.py
.streamlit/: config.toml
chromadb_storage/: chroma.sqlite3
data/chunks/: celsia_processed_20251015_223656_chunks.csv  chunks_celsia.csv  chunks_celsia.json  chunks_celsia.xlsx  chunks_limpios.csv  post_celsia_chunks.csv
data/source/: celsia_processed_20251015_223656_chunks.json  post_celsia.json
docs/: Arquitectura.drawio  n8n_guide.md
frontend/: README.md  index.html  script.js  styles.css
frontend/assets/: AGREGAR_LOGO_AQUI.txt
notebooks/transformation/: celsia_chunks_linekedin.ipynb  celsia_chunks_viewer.ipynb
notebooks/web_scraping/: celsia_linkedin_scraper.py  celsia_unified_scraper.py  celsia_unified_scraper_dev.py
scripts/: diagnostico_chromadb.py
src/agent/: core.py  state.py
src/data/: processing.py
src/tools/: celsia_tools.py
