[project]
name = "agent-celsia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jq>=1.10.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.0.3",
    "langchain-ollama>=1.0.0",
    "streamlit>=1.51.0",
]
