[project]
name = "agent-celsia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.121.3",
    "google-generativeai>=0.8.5",
    "jq>=1.10.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-google-genai>=2.0.10",
    "langchain-ollama>=0.3.10",
    "langgraph>=1.0.1",
    "langsmith>=0.4.45",
    "ollama>=0.6.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
